<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>github.io.pfichtner.integrations</groupId>
		<artifactId>jmolecules-integrations</artifactId>
		<version>0.31.0-SNAPSHOT</version>
	</parent>

	<artifactId>jmolecules-bytebuddy-tests</artifactId>
	<packaging>pom</packaging>
	<name>jMolecules - ByteBuddy - Tests</name>

	<properties>
		<byte-buddy.version>${bytebuddy.version}</byte-buddy.version>
		<spring-boot.version>${spring-boot3.version}</spring-boot.version>
		<maven.deploy.skip>true</maven.deploy.skip>
	</properties>

	<modules>
		<module>jmolecules-bytebuddy-tests-core</module>
		<module>jmolecules-bytebuddy-tests-vaadoo</module>
		<module>jmolecules-bytebuddy-tests-parent</module>
	</modules>

	<dependencies>
		<!-- for redefining already loaded classes in test -->
		<dependency>
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy-agent</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<!-- Configure the byte-buddy transform once for all test modules. Each
			     test module should execute the transform in process-classes so the
			     module's target/classes are instrumented before tests run. -->
			<plugins>
				<plugin>
					<groupId>net.bytebuddy</groupId>
					<artifactId>byte-buddy-maven-plugin</artifactId>
					<version>${byte-buddy.version}</version>
					<configuration>
						<classPathDiscovery>true</classPathDiscovery>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
